# ParetoFilter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
runs/sample_run_1/: config.yaml  sample_run_1.csv  sample_run_1_pareto_results.csv  sample_run_1_processed_data.csv  vis_data.npz
scripts/: debug_tolerance.sh  run_pareto.sh  run_pareto_uv.sh  setup_env.sh  setup_uv.sh
src/: pareto.py  preprocess.py  utils.py  visualization.py
tests/: test_preprocess.py  tolerance_comparison.py
